--- a/index.html
+++ b/index.html
@@ -414,14 +414,15 @@ setInterval('updateTimer()', 1000);
 								  </div>
 								  <div class="modal-body">
 									<p align="left">Greetings, Delegates!<br><br>
-										&emsp;&emsp;&emsp;Welcome to the R-NPSMUN 2023, the seventh session. Like always, we aspire to be even greater than before, and this year's MUN is set to rise to greater heights than ever before.
+										&emsp;&emsp;&emsp;Welcome to the R-NPSMUN 2023, the seventh session. Like always, we aspire to be even greater than before, and this year's MUN is set to rise to greater heights than ever before. 
 
-										Our EB has worked tirelessly to present five extraordinary committees, each with its own captivating agenda. It won't matter if this is your first MUN or your twentieth, R-NPSMUN will be a conference you will never forget.
-										
-										It has been years since my first MUN, but it took a look time for me to realise what people meant when they told me, “Once a person has been to an MUN, it changes them forever.”
-										
-										You’re exposed to a completely different way of communication that does not come naturally. You’re exposed to new people with whom you have to interact with, convince, and pitch your own agendas to. MUNs force you to think outside your comfort zone and advocate for topics that you yourself might not agree with. Once you come out of that protective shell around yourself, there will be no going back in.</p>
-									<p align="left">So dive into debates, speeches, crises, and press conferences. Remember, a MUN isn't about winning, but rather about making memories and friends. Above all, when you find yourself surrounded by delegates dressed in formals, trying to maintain the utmost professional and serious environment, you will find yourself holding back a smile of enjoyment. And that smile is what makes MUNs great.</p>
+											Our Executive Board has worked tirelessly to present five extraordinary committees, each with its own captivating agenda. It won't matter if you are a first-timer or a veteran, R-NPSMUN will be a conference you will never forget. 
+
+											Even though my first MUN was years ago, it took a lot of time for me to completely understand what people meant when they said, “Once a person has been to a MUN, it changes them forever.” 
+
+											You’re exposed to a completely different way of communication that does not come naturally. You’re exposed to new people with whom you have to interact with, convince, and pitch your own agendas. MUNing forces you to think outside your comfort zone and advocate for topics that you yourself might not agree with. Once you come out of that protective shell, you will become the best possible version of yourself.
+									  </p>
+									  <p align="left">So dive into debates, speeches, crises, and press conferences. Remember, MUNing isn't about winning, but rather about making memories and friends. Above all, when you find yourself surrounded by delegates dressed in formals, trying to maintain a professional and serious environment, you will find yourself holding back a smile of enjoyment. And that smile is what makes MUNs great.</p>
 								    <p align="left">May the odds be ever in your favour!</p>
 								</div>
 								  <div class="modal-footer">
