--- a/loksabha.html
+++ b/loksabha.html
@@ -95,7 +95,7 @@
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
-						Arguing the validity of Section 124A with special Reference to Freedom of Speech and Expression
+						Arguing the validity of Section 124A of the IPC with Special Reference to Freedom of Speech and Expression
 					</p>
 
 								</div>
