--- a/index.html
+++ b/index.html
@@ -448,35 +448,35 @@ setInterval('updateTimer()', 1000);
 						<tr>
 						<a href='unsc.html'>
 							<div style="border-radius: 100%; text-align: center; font-family:EB garamond;">
-								<img src="./images/comlog/UNSC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/comlog/UNSC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border : 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 									href='unsc.html'>United Nations Security Council</h1>
 							</div>
 						</a><br>
 						<a href='unhrc.html'>
 							<div style="border-radius: 100%; text-align: center">
-								<img src="./images/comlog/UNHRC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/comlog/UNHRC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border : 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 									href='unhrc.html'>United Nations Human Rights Council</h1>
 							</div>
 						</a><br>
 						<a href='loksabha.html'>
 								<div style="border-radius: 100%; text-align: center">
-									<img src="./images/comlog/LS.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%;">
+									<img src="./images/comlog/LS.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border : 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 										href='loksabha.html'>Lok Sabha</h1>
 								</div>
 						</a><br>
 						<a href='disec.html'>
 							<div style="border-radius: 100%; text-align: center">
-								<img src="./images/comlog/DISEC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/comlog/DISEC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border : 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 									href='disec.html'>Disarmament & International Security Committee</h1>
 							</div>
 						</a><br>
 						<a href='ipc.html'>
 								<div style="border-radius: 100%; text-align: center">
-									<img src="./images/comlog/IPC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%;">
+									<img src="./images/comlog/IPC.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border : 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 										href='ipc.html'>International Press Corps</h1>
 								</div>
