--- a/eb.html
+++ b/eb.html
@@ -166,7 +166,7 @@
 											<img src="./images/" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
-												<p style = "font: 2em perpetua; color: white;">Samarth S</p> 
+												<p style = "font: 2em perpetua; color: white;">Samarth Sheshadri</p> 
 											</p>
 										</div>
 									</a>
@@ -178,7 +178,7 @@
 											<img src="./images/srini.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
-												<p style = "font: 2em perpetua; color: white;">Srinivas I</p> 
+												<p style = "font: 2em perpetua; color: white;">Srinivas Iyer</p> 
 											</p>
 										</div>
 									</a>
