--- a/loksabha.html
+++ b/loksabha.html
@@ -77,6 +77,7 @@
 								<div style="text-align: center;">
 									<h2>Lok Sabha</h2>
 					<p style="font-size: 1.25em">
+						(open for grades 10, 11 and 12)<br>
 						<b>"satyaṁ brūyāt priyaṁ brūyāt na brūyāt satyam apriyam" </b>
 					</p>
 					<p style="font-size: 1.25em;">
