--- a/loksabha.html
+++ b/loksabha.html
@@ -75,9 +75,10 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Lok Sabha</h2>
+									<h2>Lok Sabha</h2><br>
+									<b>(Open only for grades 10, 11 and 12)</b> 
 					<p style="font-size: 1.25em">
-						(open for grades 10, 11 and 12)<br>
+						
 						<b>"satyaṁ brūyāt priyaṁ brūyāt na brūyāt satyam apriyam" </b>
 					</p>
 					<p style="font-size: 1.25em;">
