--- a/unhrc.html
+++ b/unhrc.html
@@ -118,7 +118,7 @@
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/Tejaswini.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/Tejaswini.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
 									<p style="font: 2em perpetua; color: white;">G K Tejhaswini</p> 
