--- a/loksabha.html
+++ b/loksabha.html
@@ -75,8 +75,9 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Lok Sabha</h2><br>
-									<b>(Open only for grades 10, 11 and 12)</b> 
+									<h2>Lok Sabha</h2>
+									(Open only for grades 10, 11 and 12)
+									 
 					<p style="font-size: 1.25em">
 						
 						<b>"satyaṁ brūyāt priyaṁ brūyāt na brūyāt satyam apriyam" </b>
