--- a/unhrc.html
+++ b/unhrc.html
@@ -76,10 +76,10 @@
 								<div style="text-align: center;">
 									<h2>United Nations Human Rights Council</h2>
 					<p style="font-size: 1.25em">
-						<b>“To deny people their human rights is to challenge their humanity.”</b>
+						<b>“The only thing that will redeem mankind is cooperation."</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Nelson Mandela</b>
+						<b>— Bertrand Russel</b>
 					</p>
 					<p style="font-size: 1.15em">
 						Within the complex tapestry of the criminal justice system, the topic of prisoner rights stands as a controversial subject, particularly when juxtaposed with the disputable issue of capital punishment. In this captivating exploration, we unravel the tapestry of legal complexities and moral dilemmas that shape the lives of those sentenced to incarceration.  
