--- a/unhrc.html
+++ b/unhrc.html
@@ -79,7 +79,7 @@
 						<b>“The only thing that will redeem mankind is cooperation."</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>— Bertrand Russel</b>
+						<b>-Bertrand Russel</b>
 					</p>
 					<p style="font-size: 1.15em">
 						Within the complex tapestry of the criminal justice system, the topic of prisoner rights stands as a controversial subject, particularly when juxtaposed with the disputable issue of capital punishment. In this captivating exploration, we unravel the tapestry of legal complexities and moral dilemmas that shape the lives of those sentenced to incarceration.  
