--- a/eb.html
+++ b/eb.html
@@ -164,7 +164,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/samarth.PNG" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
 												<p style = "font: 2em perpetua; color: white;">Samarth Sheshadri</p> 
