--- a/eb.html
+++ b/eb.html
@@ -128,7 +128,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/parthK.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF&zwnj;TECH</h1>
+												<h1 style="font: 1em;  color:white">HEAD OF&zwnj;  TECH</h1>
 												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
 											</p>
 										</div>
@@ -153,7 +153,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/sriram.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<h1 style="font: 1em;  color:white">CO-HEAD OF  LOGISTICS</h1>
 												<p style = "font: 2em perpetua; color: white;">Sriram K</p> 
 											</p>
 										</div>
@@ -165,7 +165,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/samarth.PNG" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<h1 style="font: 1em;  color:white">CO-HEAD OF  LOGISTICS</h1>
 												<p style = "font: 2em perpetua; color: white;">Samarth Sheshadri</p> 
 											</p>
 										</div>
@@ -177,7 +177,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/srini.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<h1 style="font: 1em;  color:white">CO-HEAD OF  LOGISTICS</h1>
 												<p style = "font: 2em perpetua; color: white;">Srinivas Iyer</p> 
 											</p>
 										</div>
@@ -185,13 +185,13 @@
 		
 								</article>
 
-								<!--<article>
+								<!-- <article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/ara.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF TECH</h1>
-												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
+												<h1 style="font: 1em;  color:white">HEAD OF REGISTRATIONS</h1>
+												<p style = "font: 2em perpetua; color: white;">Niranjan Salgar</p> 
 											</p>
 										</div>
 									</a>
