--- a/credits.html
+++ b/credits.html
@@ -81,7 +81,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/parthK.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">Head Of Tech</h1>
+												<h1 style="font: 1em;  color:white">Head Of &#8205; Tech</h1>
 
 												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
 											</p>
@@ -95,7 +95,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/yashA.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">Head Of Tech</h1>
+												<h1 style="font: 1em;  color:white">Head Of &#8205; Tech</h1>
 
 												<p style = "font: 2em perpetua; color: white;">Yash Aanand</p> 
 											</p>
