--- a/loksabha.html
+++ b/loksabha.html
@@ -89,7 +89,7 @@
 						The free man in a democracy is granted the right to express, write, publish, declare and broadcast what comes of his mind using the resources within his means as declared by any constitution, in written or in spirit within means of his own or those granted by his government but every feeling expressed can be a cause for commotion at any and all degree and so the obvious question if control is an apt solution arises, not in the mind of any lawmaker but also the lawful man, the participating citizen. 
 					</p>
 					<p style="font-size: 1.15em">
-						Can the Committee decide if all words under the sky as free as every man should be?
+						Can the Committee decide if all words under the sky are as free as every man should be?
 
 					</p>
 									
