--- a/unsc.html
+++ b/unsc.html
@@ -76,6 +76,7 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>United Nations Security Council</h2>
+									(Open only for grades 8 and above)
 					<p style="font-size: 1.25em">
 						<b>“Unable to make what is just strong, we have made what is strong just.”</b>
 					</p>
