--- a/unhrc.html
+++ b/unhrc.html
@@ -75,6 +75,7 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>United Nations Human Rights Council</h2>
+									(Open only for grades 8 and above)
 					<p style="font-size: 1.25em">
 						<b>“The only thing that will redeem mankind is cooperation."</b>
 					</p>
