--- a/ipc.html
+++ b/ipc.html
@@ -76,6 +76,7 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>International Press Corps</h2>
+									(Open only for grades 8 and above)
 					<p style="font-size: 1.25em">
 						<b>"Put it before them briefly, so they will read it; clearly so they will appreciate it, picturesquely so they will remember it and, above all, accurately so they will be guided by its light."</b>
 					</p>
