--- a/disec.html
+++ b/disec.html
@@ -142,7 +142,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 									<img src="./images/adhya.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">VICE-CHAIR</h1>
-										<p style = "font: 2em perpetua; color:white">Adhya Merathia</p> 
+										<p style = "font: 2em perpetua; color:white">Aadya Merathia</p> 
 									</p>
 								</div>
 							</a>
