--- a/loksabha.html
+++ b/loksabha.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2023-IPC</title>
+		<title>RNPSMUN 2023-Lok Sabha</title>
 		<link rel="icon" type="image/x-icon" href="images/comlog/LS.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
