--- a/contactus.html
+++ b/contactus.html
@@ -59,7 +59,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="contactus.html">Contact Us</a></li>
-                                 
+                                <li><a href="guidelines.html">Guidelines</a></li> 
                                 <li><a href="#" class="button primary">REGISTRATION</a><ul>
                                     <li><a href="https://forms.gle/bPAUwNtGhp71x71J9">REGISTRATION </a></li>
                                     <li><a href="https://forms.gle/zXX3QyLETL6Kp2MTA">REGISTRATION FOR NPS-RNR</a></li>
