--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@ setInterval('updateTimer()', 1000);
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
 						<!--<li><a href="credits.html">Tech Team</a></li>-->
+						<li><a href="guidelines.html">Guidelines</a></li> 
 						<li><a href="#" class="button primary">REGISTRATION</a><ul>
 							<li><a href="https://forms.gle/bPAUwNtGhp71x71J9">REGISTRATION </a></li>
 							<li><a href="https://forms.gle/zXX3QyLETL6Kp2MTA">REGISTRATION FOR NPS-RNR</a></li>
