--- a/guidelines.html
+++ b/guidelines.html
@@ -82,6 +82,7 @@
                                     <li>Students from grade 8 to 12 can participate, with the exception of Lok Sabha, which is open only for grade 10 to 12</li>
                                     <li>Lunch will not be provided by the school, students are encouraged to carry their own food. Evening Snacks/Light Refreshments will be provided to delegates.</li>
                                     <li>WhatsApp/Instagram/other social media groups not created or reccomended by schools must not be used by participating delegates</li>
+									<li>Registration fee for delegates is Rs. 500</li>
                                 </ul>
 								
 								
