--- a/ipc.html
+++ b/ipc.html
@@ -122,7 +122,7 @@
 								<img src="./images/aadya.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">EDITOR-IN-CHIEF </h1>
-									<p style = "font: 2em perpetua; color:white">Aadya Mehrotra</p>  
+									<p style = "font: 2em perpetua; color:white">Aadyaa Mehrotra</p>  
 								</p>
 							</div>
 						</a>
