--- a/ipc.html
+++ b/ipc.html
@@ -95,7 +95,7 @@
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						'Control' the Money, Control the Media: Fund vs Fact
+						'Control The Money, Control The Media': Fund Vs. Fact
 					</p>
 
 								</div>
