--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script>
-			function updateTimer() {
+			<!--function updateTimer() {
     future = Date.parse("jun 26, 2023 9:00:00");
     now = new Date();
-    diff = future - now;
+    diff = future - now;-->
 
     days = Math.floor(diff / (1000 * 60 * 60 * 24));
     hours = Math.floor(diff / (1000 * 60 * 60));
