--- a/index.html
+++ b/index.html
@@ -583,7 +583,15 @@ setInterval('updateTimer()', 1000);
 												<td>Break</td>
 											</tr>
 											<tr>
-												<td>11:30 am - 12:15 pm</td>
+												<td>11:30 am - 1:30 pm</td>
+												<td>Session 8</td>
+											</tr>
+											<tr>
+												<td>1:30 pm - 2:00 pm</td>
+												<td>Break</td>
+											</tr>
+											<tr>
+												<td>2:00 pm - 2:45 pm</td>
 												<td>Closing Ceremony</td>
 											</tr>
 										</tbody>
