--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			function updateTimer() {
     future = Date.parse("jun 26, 2023 9:00:00");
     now = new Date();
-    diff = future - now;
+    diff = now - now;
 
     days = Math.floor(diff / (1000 * 60 * 60 * 24));
     hours = Math.floor(diff / (1000 * 60 * 60));
