--- a/unsc.html
+++ b/unsc.html
@@ -173,7 +173,7 @@
             <footer id="footer">
                 <ul class="icons">
                     <li><a href="https://instagram.com/rnpsmun2023?igshid=MzRlODBiNWFlZA==s" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="mailto:rnpsmun2022@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="mailto:npsrnrmun2023@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                     <li><a href="tel:08023350361" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
                     <!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
