--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ setInterval('updateTimer()', 1000);
 							<ul>
 								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
-									<a href="#">Background Guides (Coming soon)</a>
+									<a href="#">Background Guides</a>
 
 									<ul>
 										<li><a href="https://docs.google.com/document/d/1HIuRVPQzwrpS8Pj9imeI-K9NxlkOrVLLS0fs-4iHhzA/edit?usp=sharing">UNSC </a></li>
