--- a/loksabha.html
+++ b/loksabha.html
@@ -115,7 +115,7 @@
 								<img src="./images/ananth.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">SPEAKER</h1>
-									<p style = "font: 2em perpetua; color:white" >Ananthshreyas Nair</p> 
+									<p style = "font: 2em perpetua; color:white" >Ananthashreyas Nair</p> 
 								</p>
 							</div>
 						</a>
