--- a/credits.html
+++ b/credits.html
@@ -38,18 +38,17 @@
 							<ul>
 								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
-									<a href="#">Background Guides</a>
-
+									<a href="#">Background Guides (Coming soon)</a>
+<!--
 									<ul>
-										<li><a href="https://docs.google.com/document/d/1HIuRVPQzwrpS8Pj9imeI-K9NxlkOrVLLS0fs-4iHhzA/edit?usp=sharing">UNSC </a></li>
-										<li><a href="https://docs.google.com/document/d/1Is2gI8We_YOaCWfDHIEWkGkoKfRepHwcxkLfhP6IzBw/edit?usp=sharing">UNHRC</a></li>
-										<li><a href="https://docs.google.com/document/d/1YA56dRavay-GHkLPXihtKvP79pVeao9nWqh77X4Vv3c/edit?usp=sharing">Lok Sabha</a></li>
-										<li><a href="https://docs.google.com/document/d/1X4bSdjrEEa-680HpH9EICVP5eAXg2BpcIYS6g8mgzZ0/edit?usp=drivesdk">DISEC</a></li>
-										<li><a href="https://docs.google.com/document/d/14y-RHk61HyWi1TnPdGcxSk64F2RhuX3S1JZ2xVhtCc0/edit?usp=sharing">IPC</a></li>
+										<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNSC </a></li>
+										<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
+										<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">Lok Sabha</a></li>
+										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">DISEC</a></li>
+										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
 									</ul>
-
+-->
 								</li>
-
 								<li>
 									<a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
 								</li>
